2021/10/05	Minor bug fix in rooms.{f,c}.
2021/10/06	Reconciling the Makefiles between the 1991 and 2021 translations.
2021/10/06	Upgrading ‟readit.c” to a decompiler for both ‟dindx.dat” and ‟dtext.dat”,
		as a precursor to reconciling the database files with the ‟dtextc.dat” from the 1991 translation
		and making a compiler for the database files.
2021/10/07	Adding ‟readit.c” to the 1991 C translation and reconciling with the 2021 translation.
		This might be remade into a run-time compiler to make possible dynamic databases and worlds.
2021/10/07	Trimmed the excess data from ‟dindx.dat” in the Fortran and C2021 versions.
2021/10/08	Removing unused parameters and variables: in both C translations and in the Fortran version.
2021/10/08	Revising documentation: README files (and the file manifest contained in one of them) and manual pages.
		Further reconciling the Makefiles between the 1991 and 2021 translations.
2021/10/09	Rolling back the database file format in C1991 to the format in the Fortran version:
		‟dtextc.dat” is being split back into ‟dindx.dat” and ‟dtext.dat”.
		This will break compatibility with the version of Zork distributed by Linux,
		but it requires only splitting the files at the location given by ‟mrloc” originally in the 1991 C translation.
2021/10/12	Reformatting dindx.txt in the Fortran and 2021 C translation to more closely match the 1991 C translation.
		The rdesc2 pointer to an array of messages in the room table has been changed into an array of message pointers.
2021/10/12	Resizing the message table rtext[] and formatting dindx.txt (in the 2021 C translation and Fortran version).
		This will be re-visited later, when the strings table is re-formatted.
2021/10/12	Normalized the format of the database index file dindx.dat.
		Moved the version number for the 1991 C translation up to 2.8A.
2021/10/13	Reconciling conditional code.
2021/10/13	Updating the database decompiler.