@@ -4,6 +4,41 @@ C Written by R. M. Supnik.
 C Revisions Copyright (c) 2021, Darth Spectra (Lydia Marie Williamson).
 C
 C Resident subroutines for dungeon
+
+	INTEGER FUNCTION GETREC(CH,X,IX,BUF)
+	IMPLICIT INTEGER(A-Z)
+	CHARACTER*74 BUF
+	INTEGER*2 IX, NEWIX
+	READ(UNIT=CH,REC=X) NEWIX, BUF
+C Decrypt, if it is the first record or a continuation record.
+	IF((IX.EQ.0).OR.(NEWIX.EQ.IX)) THEN
+	   DO 100 I=1,74
+	      X1=IAND(X,31)+I
+	      BUF(I:I)=CHAR(IEOR(ICHAR(BUF(I:I)),X1))
+100	   CONTINUE
+	ENDIF
+	GETREC = NEWIX
+	RETURN
+	END
+
+C
+C CONVERT ALL ARGUMENTS FROM DICTIONARY NUMBERS (IF POSITIVE)
+C TO ABSOLUTE RECORD NUMBERS.
+	INTEGER FUNCTION DEREF(N)
+	IMPLICIT INTEGER(A-Z)
+	INTEGER X
+C
+	include 'mindex.h'
+C
+	X=N
+C						!SET UP WORK VARIABLES.
+	IF(X.GT.0) X=RTEXT(X)
+C						!IF >0, LOOK UP IN RTEXT.
+	X=IABS(X)
+C						!TAKE ABS VALUE.
+        DEREF=X
+	RETURN
+	END
 C
 C Output random message routine
 C Called as:
@@ -11,7 +46,9 @@ C	CALL RSPEAK(MSGNUM)
 	SUBROUTINE RSPEAK(N)
 	IMPLICIT INTEGER(A-Z)
 C
-	CALL RSPSB2(N,0,0)
+        Y=0
+        Z=0
+	CALL RSPEAK2(DEREF(N),Y,Z)
 	RETURN
 	END
 C
@@ -21,7 +58,8 @@ C	CALL RSPSUB(MSGNUM,SUBNUM)
 	SUBROUTINE RSPSUB(N,S1)
 	IMPLICIT INTEGER(A-Z)
 C
-	CALL RSPSB2(N,S1,0)
+        Z=0
+	CALL RSPEAK2(DEREF(N),DEREF(S1),Z)
 	RETURN
 	END
 C
@@ -30,40 +68,27 @@ C Called as:
 C	CALL RSPSB2(MSGNUM,SUBNUM1,SUBNUM2)
 	SUBROUTINE    RSPSB2(N,S1,S2)
 	IMPLICIT      INTEGER(A-Z)
+	CALL RSPEAK2(DEREF(N),DEREF(S1),DEREF(S2))
+	RETURN
+	END
+
+	SUBROUTINE    RSPEAK2(X,Y,Z)
+	IMPLICIT      INTEGER(A-Z)
+	INTEGER       X,Y,Z
 	CHARACTER*74  B1,B2,B3
-	INTEGER*2     OLDREC,NEWREC,JREC
+	INTEGER*2     ZERO,OLDREC,NEWREC,JREC
 C
 	include 'gamestat.h'
 C
 	include 'mindex.h'
 	include 'io.h'
-C
-C CONVERT ALL ARGUMENTS FROM DICTIONARY NUMBERS (IF POSITIVE)
-C TO ABSOLUTE RECORD NUMBERS.
-C
-	X=N
-C						!SET UP WORK VARIABLES.
-	Y=S1
-	Z=S2
-	IF(X.GT.0) X=RTEXT(X)
-C						!IF >0, LOOK UP IN RTEXT.
-	IF(Y.GT.0) Y=RTEXT(Y)
-	IF(Z.GT.0) Z=RTEXT(Z)
-	X=IABS(X)
-C						!TAKE ABS VALUE.
-	Y=IABS(Y)
-	Z=IABS(Z)
+        ZERO=0
 	IF(X.EQ.0) RETURN
 C						!ANYTHING TO DO?
 	TELFLG=.TRUE.
 C						!SAID SOMETHING.
 C
-	READ(UNIT=STORYCH,REC=X) OLDREC,B1
-C
-100	DO 150 I=1,74
-	  X1=IAND(X,31)+I
-	  B1(I:I)=char(IEOR(ichar(B1(I:I)),X1))
-150	CONTINUE
+   	OLDREC=GETREC(STORYCH,X,ZERO,B1)
 C
 200	IF(Y.EQ.0) GO TO 400
 C						!ANY SUBSTITUTABLE?
@@ -81,8 +106,8 @@ C
 650	FORMAT(74A1)
 	X=X+1
 C						!ON TO NEXT RECORD.
-	READ(UNIT=STORYCH,REC=X) NEWREC,B1
-	IF(OLDREC.EQ.NEWREC) GO TO 100
+   	NEWREC=GETREC(STORYCH,X,OLDREC,B1)
+	IF(OLDREC.EQ.NEWREC) GO TO 200
 C						!CONTINUATION?
 	RETURN
 C						!NO, EXIT.
@@ -109,11 +134,7 @@ C						!COPY REST OF B1.
 C
 C   READ SUBSTITUTE STRING INTO B3, AND DECRYPT IT:
 C
-	READ(UNIT=STORYCH,REC=Y) JREC,B3
-	DO 1150 K1=1,74
-	  X1=IAND(Y,31)+K1
-	  B3(K1:K1)=char(IEOR(ICHAR(B3(K1:K1)),X1))
-1150	CONTINUE
+	JREC=GETREC(STORYCH,Y,ZERO,B3)
 C
 C   FILL REMAINDER OF B1 WITH CHARACTERS FROM B3:
 C
